# opg-dora-metrics

./: .gitignore  Makefile  README.md  github_deployment_frequency.py  github_repository_standards.py  github_workflow_duration.py  metadata.json  pyproject.toml  requirements.txt  service_uptime.py  service_uptime_daily.py  timer.py
.github/workflows/: _pr-and-release.yml  _tests.yml  release.yml
app/: decorator.py  logger.py
app/dates/: between.py  convert.py  duration.py  ranges.py
app/reports/: writer.py
aws/: client.py  cloudwatch.py
converter/: convert.py  meta.py
fake/github/: artifact.py  attach.py  pull_request.py  repository.py  team.py  workflow_run.py
fake/github_data/: artifact.py  pull_request.py  repository.py  team.py  workflow_run.py
gh/: auth.py  frequency.py  merges.py  team.py  workflows.py
log/: logger.py
metrics/: github.py  uptime.py
models/: aggregate.py  base.py  github_repository.py  item.py  keep.py  meta.py  simple.py
outputs/github_repository_standards/: index.html.md.erb  raw.json
reports/: deployment_frequency.py  service_uptime.py  standards_compliance.py
templates/github_deployment_frequency/: by_month.erb  by_month.md.jinja  (+4 more)
tests/: factory.py  test_factory.py  test_gh.py  test_models_aggregate.py  test_models_github_repository.py  test_models_item.py  test_models_keep.py  test_models_meta.py  test_models_simple.py  test_timer.py  test_utils_average.py  test_utils_dates.py  test_utils_group.py  test_utils_total.py
timer/: stopwatch.py
utils/: args.py  average.py  dates.py  decorator.py  group.py  total.py
(+77 files in other folders)
