[tool.poetry]
name = "opg-dora-metrics"
version = "0.0.1"
description = ""
authors = []

packages = [
    { include = "dora" },
    { include = "github" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.2"
flake8 = "^3.9.2"
pytest = "^6.2.4"
mypy = "^0.910"
flake8-mypy = "^17.8.0"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# Configuration for tool compatible with pyproject.toml
[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true

[[tool.mypy.overrides]]
module = 'dora'
